Treewide cleanup and use of modern Java features (#1599)
Signed-off-by: BT (calcastor/mame) <43831917+calcastor@users.noreply.github.com>